feat: start-dongting script add zgc config, change g1 MaxGCPauseMillis=15, require java 11